--- a/resources/assets/merchants/lang/en_US.lang
+++ b/resources/assets/merchants/lang/en_US.lang
@@ -36,6 +36,17 @@ tile.Stall.White Elm.name=White Elm Stall
 tile.Stall.Willow.name=Willow Stall
 tile.Stall.Kapok.name=Kapok Stall
 tile.Stall.Acacia.name=Acacia Stall
+tile.Stall.Palm.name=Palm Stall
+tile.Stall.Ebony.name=Ebony Stall
+tile.Stall.Fever.name=Fevertree Stall
+tile.Stall.Baobab.name=Baobab Stall
+tile.Stall.Limba.name=Limba Stall
+tile.Stall.Mahogany.name=Mahogany Stall
+tile.Stall.Teak.name=Teak Stall
+tile.Stall.Bamboo.name=Bamboo Stall
+tile.Stall.Gingko.name=Gingko Stall
+tile.Stall.Fruitwood.name=Fruitwood Stall
+tile.Stall.Mangrove.name=Mangrove Stall
 
 tile.Warehouse.name=Oak Warehouse
 tile.Warehouse.Aspen.name=Aspen Warehouse
@@ -54,6 +65,17 @@ tile.Warehouse.White Elm.name=White Elm Warehouse
 tile.Warehouse.Willow.name=Willow Warehouse
 tile.Warehouse.Kapok.name=Kapok Warehouse
 tile.Warehouse2.Acacia.name=Acacia Warehouse
+tile.Warehouse2.Palm.name=Palm Warehouse
+tile.Warehouse2.Ebony.name=Ebony Warehouse
+tile.Warehouse2.Fever.name=Fevertree Warehouse
+tile.Warehouse2.Baobab.name=Baobab Warehouse
+tile.Warehouse2.Limba.name=Limba Warehouse
+tile.Warehouse2.Mahogany.name=Mahogany Warehouse
+tile.Warehouse2.Teak.name=Teak Warehouse
+tile.Warehouse2.Bamboo.name=Bamboo Warehouse
+tile.Warehouse2.Gingko.name=Gingko Warehouse
+tile.Warehouse2.Fruitwood.name=Fruitwood Warehouse
+tile.Warehouse2.Mangrove.name=Mangrove Warehouse
 
 tile.AnvilDie.Copper.name=Copper Anvil Die
 tile.AnvilDie.Copper2.name=Copper Anvil Die
@@ -107,6 +129,17 @@ tile.StorageRack.White Elm.name=White Elm Storage Rack
 tile.StorageRack.Willow.name=Willow Storage Rack
 tile.StorageRack.Kapok.name=Kapok Storage Rack
 tile.StorageRack2.Acacia.name=Acacia Storage Rack
+tile.StorageRack2.Palm.name=Palm Storage Rack
+tile.StorageRack2.Ebony.name=Ebony Storage Rack
+tile.StorageRack2.Fever.name=Fevertree Storage Rack
+tile.StorageRack2.Baobab.name=Baobab Storage Rack
+tile.StorageRack2.Limba.name=Limba Storage Rack
+tile.StorageRack2.Mahogany.name=Mahogany Storage Rack
+tile.StorageRack2.Teak.name=Teak Storage Rack
+tile.StorageRack2.Bamboo.name=Bamboo Storage Rack
+tile.StorageRack2.Gingko.name=Gingko Storage Rack
+tile.StorageRack2.Fruitwood.name=Fruitwood Storage Rack
+tile.StorageRack2.Mangrove.name=Mangrove Storage Rack
 
 item.WarehouseBook.name=Warehouse Book
 
